[gd_scene load_steps=3 format=3 uid="uid://bxeuj45reu4ie"]

[ext_resource type="Theme" uid="uid://by7e3d3bcjv7f" path="res://Themes/basic.tres" id="1_4774r"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_nn1yk"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nn1yk")

[node name="ammo_container" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 153.0
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("1_4774r")

[node name="MarginContainer" type="MarginContainer" parent="ammo_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ammo_box" type="GridContainer" parent="ammo_container/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="ammo_description" type="Label" parent="ammo_container/MarginContainer/ammo_box"]
layout_mode = 2
theme = ExtResource("1_4774r")
text = "ammo"

[node name="ammo_count" type="Label" parent="ammo_container/MarginContainer/ammo_box"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="granade_description" type="Label" parent="ammo_container/MarginContainer/ammo_box"]
layout_mode = 2
text = "granade"

[node name="granade_count" type="Label" parent="ammo_container/MarginContainer/ammo_box"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_4774r")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="health_description" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "health"

[node name="health_count" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="stamina_description" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "dash"

[node name="stamina_count" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00"
